# py-mcmas

./: .ackrc  .dockerignore  .flake8  .gitignore  .gitmodules  .isort.cfg  .pynchon.json5  CITATION.bib  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: docker-build-push.yml  docker-build.yml  docs-build.yml  docs.yml  integration-test.yml  python-test.yml
docs/: CITATION.bib.j2  README.md.j2  badges.md.j2  cli.md.j2  config.md.j2  contributing.md.j2  doxastic.md.j2  epistemics-in-model-checkers.md.j2  index.md.j2  ispl.md.j2  isplref.md.j2  lib.md.j2  logic.md.j2  opref.md.j2  overview.md.j2  quickstart.md.j2  refs.md.j2
docs/admonition/: generated.md.j2
docs/demos/: openai.md.j2  pydantic-ai.md.j2  pythonic.md.j2  societies.md.j2  spec-algebra.md.j2
docs/img/: figure-1.mmd  figure-2.mmd  mmd-pymcmas-1.mmd  mmd-pymcmas-2.mmd  mmd-use-case.mmd
docs/logic/: opref.md.j2
docs/macros/: base.j2  site.j2
docs/schema/: ISPL.json  Simulation.json  index.md.j2
docs/theme/: base.html  logo.html
docs/theme/css/: admonitions.css  prism.css  prism.site.css  theme.css  theme_extra.css
docs/theme/js/: prism.js  theme_base.js  theme_extra.js
docs/theme/pdoc/: content.css  custom.css  frame.html.jinja2  layout.css  module.html.jinja2  theme.css
src/mcmas/: __init__.py  __main__.py  ai.py  bin.py  ctx.py  engine.py  fmtk.py  ispl.py  logic.py  parser.py  rendering.py  sim.py  typing.py
src/mcmas/examples/: __init__.py
src/mcmas/models/: __init__.py  spec.py  util.py
src/mcmas/templates/: ISPL.j2
src/mcmas/templates/prompts/: agent-generator.md  function-call-generator.md  json-response-generator.md
src/mcmas/tests/: __init__.py  fixtures.py
src/mcmas/util/: __init__.py  lme.py  typing.py
tests/data/: broken.ispl  card_games.ispl  card_games.json  card_games.json.ispl  card_games.py  doxastic.ispl  minimal.ispl  minimal.py  muddy_children.ispl  muddy_children.json  muddy_children.json.ispl
tests/itests/: agent_completion.py  agent_society.py  call_completion.py  test_agents_openai.py  test_pydantic_agents.py
tests/units/: specification_algebra.py  test_agent_from_python.py  test_analyze.py  test_class2ipl.py  test_engine.py  test_ispl_exec.py  test_logic.py  test_model.py  test_parser.py  test_pythonic_ispl.py  test_sim.py  test_transforms.py  test_util.py
