[build-system]
# XXX: If your project needs other packages to build properly, add them to this list.
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E", "SIM","I", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501","B013","B006","SIM108","W293",]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
fixable=["ALL"]
[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
